recursion.lessons.recursion.koch.Crab.scala.error
Crab:7: error: not enough arguments for method crab: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		crab(l/sqrt(2))
                    ^Crab:9: error: not enough arguments for method crab: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		crab(l/sqrt(2))
                    ^