recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
	if (levels==0) {
		avance(length)
	} else {
		gauche(45)
		crab(l/sqrt(2))
		droite(90)
		crab(l/sqrt(2))
		gauche(45)
	}
}
